--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
-    tools:context="org.me.tuoristguide.Login"
+    tools:context=".activity.Login"
     android:id="@+id/login"
     >
 <RelativeLayout
