--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="counter_text_color">#c5c4c4</color>
     <color name="PrimaryColor">#2196F3</color>
     <color name="PrimaryDarkColor">#1976D2</color>
+    <color name="accent">#477CE5</color>
+    <color name="accent_dark">#1F3765</color>
 </resources>
