--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -1,81 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent" >
-
-<fragment
-    android:id="@+id/location_map"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    class="com.google.android.gms.maps.MapFragment"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentEnd="true" />
+    android:background="@drawable/background_material"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    >
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="60dp"
+        android:src="@drawable/marker" />
 
-    <SearchView
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="85dp"
-        android:id="@+id/searchView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:queryHint="Explore"
-        android:visibility="visible"
-        android:backgroundTintMode="src_over" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="@string/lbl_you_are_at"
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/lblLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="15dp"
+        android:textColor="@color/white"
+        android:textSize="16dp" />
+
+    <TextView
+        android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/locations"
+        android:id="@+id/location_view"
+        android:textColor="@color/white"
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold" />
+    <TextView
+        android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/Temperature"
+        android:id="@+id/temperature__view"
+        android:textColor="@color/white"
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold"/>
+
+
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/gallerylayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/condition"
+            android:id="@+id/condition_view"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/imageView"
+            android:background="#0000"
+            android:alpha=".65"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:src="@drawable/ic_explore"
+            android:layout_alignTop="@id/condition_view"
+            android:layout_alignBottom="@id/condition_view"
+            android:layout_centerHorizontal="true"
+             />
+    </RelativeLayout>
+
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:weightSum="1"
-        android:background="#d7d9d9">
-
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageButton2"
-            android:layout_gravity="center_horizontal|bottom"
-            android:src="@drawable/ic_location" />
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="280dp"
-            android:layout_height="100dp"
-            android:longClickable="false"
-            android:layout_gravity="bottom|right"
-            android:id="@+id/linearLayout"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_weight="1.75">
-
-            <TextView
-                android:id="@+id/txtStatus"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center|right|top"
-                android:drawablePadding="5dp"
-                android:singleLine="true"
-                android:text="@string/CommercialName"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:textSize="23dp" />
-
-            <RatingBar
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:id="@+id/ratingBar"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="bottom|right"
-                android:numStars="5"
-                android:rating="4.5"
-                android:stepSize="0.5" />
-
-        </LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/place_autocomplete_button_padding"
+        >
+        <TextView
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/time"
+            android:text="@string/Time"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-</RelativeLayout>
+
+
+
+</LinearLayout>
