--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -77,7 +77,7 @@
             android:alpha=".65"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:src="@drawable/ic_explore"
+            android:src="@drawable/ic_directions"
             android:layout_alignTop="@id/condition_view"
             android:layout_alignBottom="@id/condition_view"
             android:layout_centerHorizontal="true"
