--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -7,7 +7,7 @@
     https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=DD:B6:0C:B1:B4:D9:2B:A1:CE:31:96:DC:FA:E9:33:58:3E:96:88:1B%3Borg.me.tuoristguide.activity
 
     You can also add your credentials to an existing key, using this line:
-    DD:B6:0C:B1:B4:D9:2B:A1:CE:31:96:DC:FA:E9:33:58:3E:96:88:1B;org.me.tuoristguide.activity
+    DD:B6:0C:B1:B4:D9:2B:A1:CE:31:96:DC:FA:E9:33:58:3E:96:88:1B;org.me.tuoristguide.ui.activity
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
