--- a/TouristGuide-Server/app/views/index.scala.html
+++ b/TouristGuide-Server/app/views/index.scala.html
@@ -35,7 +35,7 @@
         <div class="container">
             <h1>SOC_NETWORK</h1>
 
-            <form id="searchForm" , action = "@routes.Application.getPersons()", method="GET">
+            <form id="searchForm" , method="GET">
                 <fieldset>
                     <input id="s" type="text" />
                      <input type="submit" value="Submit" id="submitButton" />
