--- a/client/app/src/main/res/layout/activity_login.xml
+++ b/client/app/src/main/res/layout/activity_login.xml
@@ -4,60 +4,66 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
-    tools:context=".ui.activity.Login"
-    android:id="@+id/login"
-    >
-<RelativeLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#ffffff">
+    tools:context=".ui.activity.ProfileActivity"
+    android:id="@+id/login" >
 
-    <!--  Header Starts-->
-    <LinearLayout android:id="@+id/header"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:background="@layout/header_gradient"
-        android:paddingTop="5dip"
-        android:paddingBottom="5dip">
-        <!-- Logo Start-->
-        <ImageView android:src="@drawable/logo"
-            android:layout_width="385dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dip"/>
-        <!-- Logo Ends -->
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:background="#ffffff">
 
-    <!--  Header Ends -->
 
-    <!-- Footer Start -->
-    <LinearLayout
-        android:id="@+id/footer"
-        android:layout_width="fill_parent"
-        android:layout_height="90dip"
-        android:background="@layout/footer_repeat"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
-
-    </LinearLayout>
-
-    <!-- Place footer next to header to set z-index property to minus value -->
-    <!-- Footer Ends -->
-
-    <!-- Login Form -->
-
-        <com.facebook.login.widget.LoginButton
-
-            android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:src="@drawable/profile"
+            android:layout_margin="30dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/profile_picture"
             android:layout_centerHorizontal="true" />
 
 
 
-    <!-- Login Form Ends -->
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_below="@+id/profile_picture"
+            android:layout_marginBottom="20dp"
+            android:text="user name"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/user_email"
+            android:layout_below="@+id/user_name"
+            android:layout_marginBottom="20dp"
+            android:text="user email"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
+
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/btn_login"
+            android:layout_marginBottom="10dp"
+            android:layout_below="@+id/user_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
+
+        <TableLayout
+            android:layout_below="@id/btn_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView android:text="comment 1" />
+            <TextView android:text="comment 1" />
+            <TextView android:text="comment 1" />
+            <TextView android:text="comment 1" />
+
+        </TableLayout>
+
+    </RelativeLayout>
 
 </ScrollView>
