--- a/client/app/src/main/res/layout/fragment_explore.xml
+++ b/client/app/src/main/res/layout/fragment_explore.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto">
 
     <fragment
         class="com.google.android.gms.maps.MapFragment"
@@ -80,5 +81,16 @@
         </LinearLayout>
     </LinearLayout>
 
+    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/my_location_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_my_location"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_dark"
+        fab:fab_colorRipple="@color/accent"/>
 
 </RelativeLayout>
