--- a/client/app/src/main/res/layout/fragment_explore.xml
+++ b/client/app/src/main/res/layout/fragment_explore.xml
@@ -4,13 +4,11 @@
     android:layout_height="match_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto">
 
-    <fragment
-        class="com.google.android.gms.maps.MapFragment"
+    <FrameLayout
         android:id="@+id/explore_map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_height="match_parent"/>
+    
     <SearchView
         android:layout_width="wrap_content"
         android:layout_height="85dp"
