--- a/client/app/src/main/res/layout-large/fragment_explore.xml
+++ b/client/app/src/main/res/layout-large/fragment_explore.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto">
 
-    <fragment
-        class="com.google.android.gms.maps.MapFragment"
+    <FrameLayout
         android:id="@+id/explore_map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_height="match_parent"/>
+
     <SearchView
         android:layout_width="wrap_content"
         android:layout_height="85dp"
@@ -30,15 +29,20 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="#d7d9d9" >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageButton
+                android:layout_weight="5"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/route_plan"
+                android:layout_gravity="center_horizontal|bottom"
+                android:src="@drawable/ic_location"
+                android:onClick="onClick"/>
+        </LinearLayout>
 
-        <ImageButton
-            android:layout_weight="5"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/imageButton3"
-            android:layout_gravity="center_horizontal|bottom"
-            android:src="@drawable/ic_location"
-            android:onClick="onClick"/>
+
 
         <LinearLayout
             android:layout_weight="1"
@@ -54,7 +58,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_weight="3"
+                android:layout_weight="500"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center|right|top"
@@ -80,5 +84,16 @@
         </LinearLayout>
     </LinearLayout>
 
+    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/my_location_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_my_location"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_dark"
+        fab:fab_colorRipple="@color/accent"/>
 
 </RelativeLayout>
