--- a/client/app/src/main/res/layout-large/fragment_explore.xml
+++ b/client/app/src/main/res/layout-large/fragment_explore.xml
@@ -84,6 +84,17 @@
         </LinearLayout>
     </LinearLayout>
 
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="168dp"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/transparent"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"/>
+
+
     <com.github.clans.fab.FloatingActionButton
         android:id="@+id/my_location_button"
         android:layout_width="wrap_content"
