--- a/client/app/src/main/res/layout/fragment_explore.xml
+++ b/client/app/src/main/res/layout/fragment_explore.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"/>
 
 
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
@@ -30,5 +31,18 @@
         fab:fab_colorNormal="@color/accent"
         fab:fab_colorPressed="@color/accent_dark"
         fab:fab_colorRipple="@color/accent"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageButton
+            android:layout_weight="5"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/route_plan"
+            android:layout_gravity="center_horizontal|bottom"
+            android:src="@drawable/ic_location"
+            android:onClick="onClick"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
