--- a/client/app/src/main/res/layout-large/activity_detail.xml
+++ b/client/app/src/main/res/layout-large/activity_detail.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:src="@drawable/sv_campus"
-        android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:id="@+id/place_image"
-        android:layout_height="200dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:id="@+id/header"
         android:layout_height="match_parent">
+        <ImageView
+            android:src="@drawable/sv_campus"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:id="@+id/place_image"
+            android:layout_height="200dp" />
+
         <LinearLayout
             android:layout_margin="10dp"
             android:orientation="horizontal"
@@ -38,26 +43,13 @@
                 android:textSize="16sp"
                 android:text="5 stars"
                 android:layout_height="wrap_content" />
-
         </LinearLayout>
-        <TableLayout
-            android:id="@+id/comments"
-            android:layout_width="match_parent"
-            android:layout_weight="5"
-            android:layout_height="0dp">
-
-            <TableRow>
-
-                <TextView
-                    android:layout_margin="20dp"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="hello there"
-                    />
-
-            </TableRow>
-        </TableLayout>
-
+        <ListView
+            android:background="#ffffff"
+            android:layout_width="wrap_content"
+            android:minHeight="720dp"
+            android:layout_height="600dp"
+            android:id="@+id/listview_comment"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_margin="10dp"
@@ -77,6 +69,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-    </LinearLayout>
 
-</LinearLayout>
+
+
+    </LinearLayout>
+</RelativeLayout>
+
+</ScrollView>
