--- a/client/app/src/main/res/layout-large/activity_login.xml
+++ b/client/app/src/main/res/layout-large/activity_login.xml
@@ -56,11 +56,12 @@
             android:layout_below="@id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#ffffff"
             android:id="@+id/tableLayout">
-
         </TableLayout>
 
         <ListView
+            android:background="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listview_comment"
