--- a/client/app/src/main/res/layout/comment_item.xml
+++ b/client/app/src/main/res/layout/comment_item.xml
@@ -31,18 +31,18 @@ android:layout_height="match_parent" android:background="#ffffff">
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
                 android:paddingTop="4dp"
-                android:id="@+id/profile_picture"
+                android:id="@+id/comment_profile_picture"
                 android:layout_centerHorizontal="true" />
 
 
             <TextView
                 android:text="Name"
-                android:id="@+id/user_name"
+                android:id="@+id/comment_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_alignRight="@+id/profile_picture"
-                android:layout_below="@id/profile_picture"
+                android:layout_alignRight="@+id/comment_profile_picture"
+                android:layout_below="@id/comment_profile_picture"
                 android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceMedium"
