--- a/client/app/src/main/res/layout/fragment_explore.xml
+++ b/client/app/src/main/res/layout/fragment_explore.xml
@@ -8,6 +8,18 @@
         android:id="@+id/explore_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <SearchView
+        android:layout_width="wrap_content"
+        android:layout_height="85dp"
+        android:id="@+id/search_view"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:queryHint="@string/search_hint"
+        android:visibility="visible"
+        android:backgroundTintMode="src_over"
+        android:onClick="onClick">
+    </SearchView>
 
 
     <android.support.v4.view.ViewPager
