--- a/client/app/src/main/res/menu/drawer.xml
+++ b/client/app/src/main/res/menu/drawer.xml
@@ -20,6 +20,11 @@
             android:icon="@drawable/ic_explore"
             android:title="@string/explore_string" />
 
+        <item
+            android:id="@+id/route"
+            android:checked="false"
+            android:icon="@drawable/ic_explore"
+            android:title="Route" />
 
     </group>
 </menu>
