--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="view_bg">#b20e0f</color>
+    <color name="red">#FF0000</color>
     <color name="white">#ffffff</color>
     <color name="btn_bg">#3e4a56</color>
 </resources>
