--- a/client/app/src/main/res/layout/route_bottom_item.xml
+++ b/client/app/src/main/res/layout/route_bottom_item.xml
@@ -1,23 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright 2014-2015 Daniel Pedraza-Arcega
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="50dp">
 
     <include layout="@layout/delete_layout"/>
 
@@ -27,16 +12,17 @@
         android:background="@android:color/white">
 
         <ImageView
-            android:id="@+id/category_image"
+            android:id="@+id/marker_image"
             android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:layout_height="40dp"
+            android:src="@drawable/ic_generic_category"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            android:layout_alignTop="@+id/business_name"
-            android:layout_toRightOf="@+id/category_image"
+            android:layout_alignBottom="@+id/location_description"
+            android:layout_toRightOf="@id/marker_image"
             android:scaleType="fitXY"
             android:src="@drawable/route_bottom_dot"/>
 
@@ -45,32 +31,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="2dp"
-            android:layout_toLeftOf="@+id/reorder_icon"
-            android:layout_toRightOf="@id/category_image"
-            android:layout_toStartOf="@+id/reorder_icon"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_toRightOf="@id/marker_image"
+            android:text="@string/current_location"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         <TextView
-            android:id="@+id/category_name"
+            android:id="@+id/location_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/business_name"
-            android:layout_alignRight="@+id/business_name"
             android:layout_below="@id/business_name"
             android:layout_marginLeft="30dp"
-            android:layout_toRightOf="@id/category_image"
+            android:layout_marginRight="4dp"
+            android:layout_toRightOf="@id/marker_image"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
-
-        <ImageView
-            android:id="@+id/reorder_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/category_image"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
-            android:src="@drawable/ic_reorder"/>
     </RelativeLayout>
 </com.daimajia.swipe.SwipeLayout>
 
