--- a/client/app/src/main/res/layout/comment_item.xml
+++ b/client/app/src/main/res/layout/comment_item.xml
@@ -81,10 +81,54 @@ android:layout_height="match_parent" android:background="#ffffff">
                 android:id="@+id/CommentText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_route"
-                android:drawablePadding="10dp"
                 android:text="comment"/>
+            <LinearLayout
+                android:layout_width="305dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@id/CommentText"
+                >
 
+                <ImageView android:id="@+id/img_like"
+                    android:src="@drawable/like"
+                    android:scaleType="centerInside"
+                    android:layout_width="80dip"
+                    android:layout_height="35dip"
+
+                    android:layout_marginLeft="5dp"
+                    android:layout_centerVertical="true"/>
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="0"
+                    android:id="@+id/text_like_cnt"
+                    android:padding="5dp"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#000000" />
+
+
+                <ImageView android:id="@+id/img_dislike"
+                    android:src="@drawable/dislike"
+                    android:scaleType="centerInside"
+                    android:layout_width="80dip"
+                    android:layout_height="35dip"
+                    android:layout_marginLeft="5dp"
+                    android:layout_centerVertical="true"/>
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="0"
+                    android:id="@+id/text_dislike_cnt"
+                    android:padding="5dp"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#000000" />
+
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
