fix viewpager bug

--- a/client/app/src/main/res/layout/comment_item.xml
+++ b/client/app/src/main/res/layout/comment_item.xml
@@ -135,6 +135,7 @@
                         style="?android:attr/buttonStyleSmall"
                         android:layout_width="80dp"
                         android:layout_height="35dp"
+                        android:visibility="gone"
                         android:text="Share"
                         android:id="@+id/share_fb"
                         android:textSize="10dp" />
